--- a/responsive/sample-3/css/style.css
+++ b/responsive/sample-3/css/style.css
@@ -1,16 +1,87 @@
+* {
+    box-sizing: border-box;
+}
+
 .my-container {
     display: flex;
-    flex-direction: row-reverse;
     width: 80%;
+    height: 600px;
     margin: 60px auto;
     background-color: #80c;
     border-radius: 8px;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    align-content: center;
 }
 
 .my-item {
+    height: 150px;
     background-color: #2fb;
     border-radius: 8px;
-    margin: 5px;
     padding: 30px;
-    border: 4px solid white
+    border: 4px solid white;
+    flex-basis: 15%;
+}
+
+.my-item-2 {
+    height: 150px;
+    background-color: #2fb;
+    border-radius: 8px;
+    padding: 30px;
+    border: 4px solid white;
+    flex-basis: 300px;
+}
+
+
+.order-1 {
+    order: 1;
+}
+
+.order-2 {
+    order: 2;
+}
+
+.order-3 {
+    order: 3;
+}
+
+.order-4 {
+    order: 4;
+}
+
+.grow-1 {
+    flex-grow: 1;
+}
+
+.grow-2 {
+    flex-grow: 2;
+}
+
+.shrink-2 {
+    flex-shrink: 2;
+}
+
+.shrink-3 {
+    flex-shrink: 3;
+}
+
+.self-top {
+    align-self: flex-start;
+}
+
+.self-center {
+    align-self: center;
+}
+
+
+/* More complex to control */
+.flex-grow-3 {
+    flex: 3 1 auto;
+}
+
+.flex-shrink-3 {
+    flex: 0 3 auto;
 }
