--- a/sample/portifolio/1/css/main.css
+++ b/sample/portifolio/1/css/main.css
@@ -10,13 +10,70 @@ p {
     font-family: 'Open Sans', sans-serif;
 }
 
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes lineDown {
+    25% {
+        transform: scale(1, 1);
+        transform-origin: top center;
+    }
+
+    50% {
+        transform: scale(1, 1);
+        transform-origin: top center;
+    }
+
+    75% {
+        transform: scale(1, 1);
+        transform-origin: bottom center;
+    }
+
+    100% {
+        transform: scale(1, 0);
+        transform-origin: bottom center;
+    }
+}
+
+@keyframes arrowDown {
+    30% {
+        bottom: 15px;
+        opacity: 1;
+    }
+
+    70% {
+        bottom: 10px;
+        opacity: 1; 
+    }
+
+    100% {
+        bottom: 5px;
+        opacity: 0; 
+    }
+}
+
 @media screen and (min-width: 320px) {
-    .p1-page-wrapper {
+    .p1-page-wrapper, .p1-preloader {
         width: 100%;
         height: 100vh;
-        display: block;
+        display: table;
         background-color: #111;
         border: 30px solid #000;
+    }
+
+    .p1-preloader {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 
     .p1-topbar {
@@ -27,6 +84,7 @@ p {
         position: fixed;
         top: 0;
         left: 0;
+        z-index: 2;
     }
 
     .p1-logo {
@@ -62,15 +120,14 @@ p {
         border-radius: 50%;
         z-index: 2;
         transition: all 0.2s ease-out;
-    }
-
-    .p1-btn-contact:hover {
-       background-position-y: -45px; 
+        border: none;
+        cursor: pointer;
     }
 
     .p1-contact-info {
         width: 245px;
         height: 165px;
+        display: none;
         padding: 25px;
         position: fixed;
         bottom: 115px;
@@ -127,6 +184,72 @@ p {
         height: auto;
         display: block;        
         margin: 13px auto;
+    }
+
+    /* HOME */
+
+    .p1-display-text {
+        margin-top: 10%;
+    }
+
+    #p1-home-presentation {
+        background-image: url('../image/joao-lemon-designer-home.png');
+        background-repeat: no-repeat;
+        background-position: 50% bottom;
+        background-size: contain;
+        position: relative;
+    }
+
+    .p1-scroll-down {
+        width: 70px;
+        height: 105px;
+        border-radius: 35px 35px 0 0;
+        background-color: #2C6;
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        z-index: 2;
+        cursor: pointer;
+    }
+
+    .p1-arrow-down {
+        width: 100%;
+        height: 75px;
+        display: table;
+        margin-top: 30px;
+        position: relative;
+    }
+
+    .p1-arrow-down img {
+        width: 16px;
+        height: 10px;
+        display: block;
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        opacity: 1;
+        animation: arrowDown 1.5s linear 1.5s infinite;
+    }
+
+    .p1-arrow-down:before {
+        content: '';
+        width: 2px;
+        height: 45px;
+        display: block;
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        background-color: #000;
+        transform-origin: top center;
+        transform: scale(1, 0);
+        animation: lineDown 1.5s ease-out infinite;
     }
 }
 
@@ -195,12 +318,20 @@ p {
     
 }
 
-/* UTILS */
+/* SIZE TEXT */
 
 .p1-title {
     font-weight: 100;
     font-family: 'Abril Fatface', serif;
 }
+
+.p1-title-big {
+    font-weight: 100;
+    font-size: 120px;
+    font-family: 'Abril Fatface', serif;
+}
+
+/* COLOR TEXT */
 
 .p1-text-green {
     color: #2C6;
@@ -218,6 +349,8 @@ p {
     color: #000;
 }
 
+/* BACKGROUND COLOR */
+
 .p1-bg-green {
     background-color: #2C6;
 }
@@ -232,4 +365,78 @@ p {
 
 .p1-bg-black {
     background-color: #000;
+}
+
+/* MARGINS */
+
+.p1-m-15 {
+    margin: 15px;
+}
+
+.p1-mt-15 {
+    margin-top: 15px;
+}
+
+.p1-ml-15 {
+    margin-left: 15px;
+}
+
+.p1-mb-15 {
+    margin-bottom: 15px;
+}
+
+.p1-mr-15 {
+    margin-right: 15px;
+}
+
+/* PADDINGS */
+
+.p1-p-15 {
+    padding: 15px;
+}
+
+.p1-pt-15 {
+    padding-top: 15px;
+}
+
+.p1-pl-15 {
+    padding-left: 15px;
+}
+
+.p1-pb-15 {
+    padding-bottom: 15px;
+}
+
+.p1-pr-15 {
+    padding-right: 15px;
+}
+
+/* TEXT-ALIGN */
+
+.p1-text-align-center {
+    text-align: center;
+}
+
+.p1-full-heigth {
+    height: 100vh;
+}
+
+/* ACTIONS */
+
+.p1-show {
+    display: block;
+}
+
+.p1-change-position-y {
+    background-position-y: -45px;
+}
+
+.p1-fade-out {
+    animation: fadeOut 2s forwards ease-out;
+}
+
+/* FIXES */
+
+.p1-fix-first-section{
+    height: calc(100vh - 30px);
 }
